# mqtt_vars

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: mqtt_vars.c
test/: mqtt.json
